--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -1,1 +1,70 @@
+name: Build, Test, SonarQube, Ngrok & Push Backend Docker Image
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+    name: Build & Analyze
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1️⃣ Checkout du code
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # 2️⃣ Setup Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+
+      # 3️⃣ Installer les dépendances
+      - name: Install dependencies
+        run: npm ci
+
+      # 4️⃣ Build du backend
+      - name: Build backend
+        run: npm run build
+       
+       # 7️⃣ Log in to DockerHub
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: romdhanihana
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # 8️⃣ Exécuter l'analyse SonarQube
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_HOST_URL: https://nondiagrammatic-leeanne-mountainously.ngrok-free.dev # ou ngrok URL
+          SONAR_TOKEN: sqp_2ea06b6e4bde1db861a9187a32dfd0dff41a0dde
+        with:
+          args: >
+            -Dsonar.projectKey=Xplanb-frontend
+            -Dsonar.sources=src
+            -Dsonar.exclusions=**/node_modules/**,**/dist/**
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+      # 9️⃣ Construire l’image Docker
+      - name: Build Docker image
+        run: |
+          IMAGE_NAME=romdhanihana/xplanfrontv1.0.0
+          VERSION=${GITHUB_SHA::7}
+          docker build -t $IMAGE_NAME:$VERSION -t $IMAGE_NAME:latest .
+
+      # 🔟 Push vers DockerHub
+      - name: Push Docker images
+        run: |
+          IMAGE_NAME=romdhanihana/xplanfrontv1.0.0
+          VERSION=${GITHUB_SHA::7}
+          docker push $IMAGE_NAME:$VERSION
+          docker push $IMAGE_NAME:latest
