--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # --- Redirect API calls to NestJS backend ---
     location /api/ {
-        proxy_pass http://3000:3000/;
+        proxy_pass http://backend_container:3000/;
         proxy_http_version 1.1;
 
         proxy_set_header Upgrade $http_upgrade;
