--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,17 +2,15 @@ server {
     listen 80;
     server_name localhost;
 
-    # --- Serve React frontend ---
     location / {
         root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # --- Redirect API calls to NestJS backend ---
     location /api/ {
-        proxy_pass http://backend_container:3000/;
+        proxy_pass http://backend:3000/;
         proxy_http_version 1.1;
-
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
