--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,70 @@
+## --- CORS ORIGIN MAPPING ---
+map $http_origin $cors_allow_origin {
+    default "";
+    ~^https?://localhost(:[0-9]+)?$ $http_origin;
+    # Ajoutez ici votre domaine si vous en avez un
+    # https://xplanb.com https://xplanb.com;
+}
+
 server {
     listen 80;
     server_name localhost;
 
+    ##################################################
+    # FRONTEND (Static Files)
+    ##################################################
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
+    ##################################################
+    # BACKEND API (proxy vers NestJS)
+    ##################################################
     location /api/ {
-        proxy_pass http://backend:3000/;
+
+        # ---------- CORS ----------
+        if ($cors_allow_origin != "") {
+
+            # Préflight OPTIONS
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_allow_origin always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
+                add_header 'Access-Control-Max-Age' 1728000 always;
+                return 204;
+            }
+
+            # Requêtes simples
+            add_header 'Access-Control-Allow-Origin' $cors_allow_origin always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+        }
+
+        # ---------- PROXY VERS BACKEND ----------
+        proxy_pass http://backend:3000;
+
+        # Support WebSocket
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection "upgrade";
+
+        # Forward info
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Timeouts
+        proxy_read_timeout 90;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+
+        proxy_redirect off;
         proxy_cache_bypass $http_upgrade;
     }
 
