--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,8 @@
-## ============================
-##   CORS ORIGIN MAPPING
-## ============================
+## --- CORS ORIGIN MAPPING ---
 map $http_origin $cors_allow_origin {
     default "";
     ~^https?://localhost(:[0-9]+)?$ $http_origin;
-    # Ajoutez votre domaine ici :
+    # Ajoutez ici votre domaine
     # ~^https?://xplanb\.com$ $http_origin;
 }
 
@@ -12,40 +10,31 @@ server {
     listen 80;
     server_name localhost;
 
-    ## ============================
-    ##   FRONTEND (React build)
-    ## ============================
+    ##################################################
+    # FRONTEND (React build)
+    ##################################################
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    ## ============================
-    ##   BACKEND (NestJS)
-    ## ============================
-    location /api/ {
+    ##################################################
+    # BACKEND API (proxy vers NestJS)
+    ##################################################
+    location /{
+        # ----------- CORS GLOBAL -----------
+        add_header 'Access-Control-Allow-Origin' $cors_allow_origin always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET,POST,PUT,PATCH,DELETE,OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
 
-        # ---------- CORS ----------
-        if ($cors_allow_origin != "") {
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors_allow_origin always;
-                add_header Access-Control-Allow-Credentials true;
-                add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS";
-                add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, Origin, X-Requested-With";
-                add_header Access-Control-Max-Age 1728000;
-                return 204;
-            }
-
-            add_header Access-Control-Allow-Origin $cors_allow_origin always;
-            add_header Access-Control-Allow-Credentials true;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS";
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept, Origin, X-Requested-With";
-            add_header Access-Control-Expose-Headers "Content-Length,Content-Range";
+        # Préflight OPTIONS sans if
+        if ($request_method = OPTIONS) {
+            return 204;
         }
 
-        # ---------- PROXY VERS NESTJS ----------
+        # ----------- PROXY VERS BACKEND -----------
         proxy_pass http://backend:3000;
 
         proxy_http_version 1.1;
@@ -56,17 +45,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_read_timeout 90;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-
-        proxy_redirect off;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
     }
 }
