--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,3 @@
-## --- CORS ORIGIN MAPPING ---
-map $http_origin $cors_allow_origin {
-    default "";
-    ~^https?://localhost(:[0-9]+)?$ $http_origin;
-    # Ajoutez ici votre domaine
-    # ~^https?://xplanb\.com$ $http_origin;
-}
-
 server {
     listen 80;
     server_name localhost;
@@ -20,27 +12,11 @@ server {
     }
 
     ##################################################
-    # BACKEND API (proxy vers NestJS)
+    # BACKEND API (NestJS)
     ##################################################
-    location /{
-        # ----------- CORS GLOBAL -----------
-        add_header 'Access-Control-Allow-Origin' $cors_allow_origin always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Methods' 'GET,POST,PUT,PATCH,DELETE,OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
-
-        # Préflight OPTIONS sans if
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
-
-        # ----------- PROXY VERS BACKEND -----------
-        proxy_pass http://backend:3000;
-
+    location /api/ {
+        proxy_pass http://backend:3000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
