--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     ##################################################
     # BACKEND API (NestJS)
     ##################################################
-    location /api/ {
+    location /auth/ {
         proxy_pass http://backend:3000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
