--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,21 +2,17 @@ server {
     listen 80;
     server_name localhost;
 
-    ##################################################
-    # FRONTEND (React build)
-    ##################################################
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ @backend;
     }
 
-    ##################################################
-    # BACKEND API (NestJS)
-    ##################################################
-    location /auth/ {
-        proxy_pass http://backend:3000/;
+    location @backend {
+        proxy_pass http://backend:3000;
         proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
