--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,13 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
-
+# 1️⃣ Images uploadées (statique pur)
+    location /uploads/ {
+        alias /uploads/;
+        autoindex off;
+        access_log off;
+        expires 30d;
+    }
     location / {
         try_files $uri $uri/ @backend;
     }
