--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,10 +5,15 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 # 1️⃣ Images uploadées (statique pur)
-    location /uploads/ {
-        alias /uploads/images/;
-        autoindex off;
-        access_log off;
+   location /uploads/ {
+        proxy_pass http://backend:3000/uploads/images/;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
         expires 30d;
     }
     location / {
