--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     index index.html;
 # 1️⃣ Images uploadées (statique pur)
     location /uploads/ {
-        alias /uploads/;
+        alias /uploads/images/;
         autoindex off;
         access_log off;
         expires 30d;
