--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
     location / {
         try_files $uri $uri/ @backend;
     }
-
+    
     location @backend {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
@@ -17,5 +17,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /uploads/ {
+        alias /usr/share/nginx/uploads/;
+        access_log off;
+        autoindex off;
+        add_header Cache-Control "public, max-age=31536000";
     }
 }
