--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,10 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
-
+    client_max_body_size 20M;
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    # FRONTEND (fichiers statiques)
     location / {
         try_files $uri $uri/ @backend;
     }
@@ -18,10 +21,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    # UPLOADS (rediriger toutes les requêtes vers le volume)
     location /uploads/ {
         alias /usr/share/nginx/uploads/;
         access_log off;
         autoindex off;
         add_header Cache-Control "public, max-age=31536000";
+    }
+
+    # PROXY pour les URLs http://uploads/…
+    location ~ ^/uploads/(.*)$ {
+        proxy_pass http://localhost/uploads/$1;
     }
 }
