--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,16 +21,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    # UPLOADS (rediriger toutes les requêtes vers le volume)
+    # UPLOADS - Serve static files from volume
     location /uploads/ {
         alias /usr/share/nginx/uploads/;
         access_log off;
         autoindex off;
-        add_header Cache-Control "public, max-age=31536000";
-    }
-
-    # PROXY pour les URLs http://uploads/…
-    location ~ ^/uploads/(.*)$ {
-        proxy_pass http://localhost/uploads/$1;
+        add_header Cache-Control "public, max-age=31536000, must-revalidate";
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "GET, HEAD, OPTIONS";
+        expires 365d;
     }
 }
