--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,6 @@ server {
     location @backend {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,12 +22,14 @@ server {
     }
     # UPLOADS - Serve static files from volume
     location /uploads/ {
-        alias /usr/share/nginx/uploads/;
-        access_log off;
-        autoindex off;
+        proxy_pass http://backend:3000/uploads/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         add_header Cache-Control "public, max-age=31536000, must-revalidate";
         add_header Access-Control-Allow-Origin "*";
         add_header Access-Control-Allow-Methods "GET, HEAD, OPTIONS";
-        expires 365d;
     }
 }
