--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,7 +22,7 @@ server {
     }
     # UPLOADS - Serve static files from volume
     location /uploads/ {
-        proxy_pass http://backend:3000/uploads/;
+        proxy_pass http://localhost/uploads/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
