--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,9 +9,8 @@ server {
     access_log /var/log/nginx/access.log;
     # FRONTEND (fichiers statiques)
     location / {
-        try_files $uri $uri/ @backend;
+        try_files $uri $uri/ /index.html @backend;
     }
-    
     location @backend {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
@@ -19,5 +18,18 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+     location /api/upload-image {
+        proxy_pass http://backend:3000/api/upload-image;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 }
