--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,30 +4,43 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
+
     client_max_body_size 20M;
+
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    # FRONTEND (fichiers statiques)
-    location / {
-        try_files $uri $uri/ @backend;
+
+    # =========================
+    # 1️⃣ Images uploadées (statique)
+    # =========================
+    location /uploads/ {
+        alias /uploads/;
+        autoindex off;
+        access_log off;
+        expires 30d;
+        add_header Cache-Control "public";
     }
-    location @backend {
+
+    # =========================
+    # 2️⃣ API Backend
+    # =========================
+    location /api/ {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    location /api/upload-image {
-        proxy_pass http://backend:3000/api/upload-image;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+    }
+
+    # =========================
+    # 3️⃣ React SPA
+    # =========================
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
