--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,6 @@ server {
     client_max_body_size 20M;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    # FRONTEND (fichiers statiques)
     location / {
         try_files $uri $uri/ @backend;
     }
@@ -19,15 +18,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /projetpfe_uploads_data/ {
-        proxy_pass http://backend:3000/api/upload-image;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+     # 🔥 Accès aux images uploadées
+    location /uploads/ {
+        alias /uploads/;
+        autoindex off;
+        add_header Cache-Control "public, max-age=31536000";
     }
+
 }
