Update nginx configuration for improved file handling and logging

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,8 @@ server {
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ @backend;
     }
     location @backend {
@@ -19,9 +21,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /uploads/ {
-        alias /uploads/;
-        autoindex off;
-        add_header Cache-Control "public, max-age=31536000";
+    alias /uploads/images/;
+    autoindex off;
+    add_header Cache-Control "public, max-age=31536000";
     }
 
 }
