--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /uploads/ {
-        alias /uploads/;
+        alias /uploads/images/;
         autoindex off;
         add_header Cache-Control "public, max-age=31536000";
     }
