Fix uploads alias in nginx configuration to point to correct uploads directory

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /uploads/ {
-        alias http://backend:3000/uploads/images/;
+        alias /usr/src/app/uploads/;
         autoindex off;
         add_header Cache-Control "public, max-age=31536000";
     }
