--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,10 +20,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /uploads/ {
-        alias /usr/src/app/uploads/;
-        autoindex off;
-        add_header Cache-Control "public, max-age=31536000";
+    location @frontend {
+        proxy_pass http://frontend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
 }
