--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,14 +4,31 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
+
     client_max_body_size 20M;
+
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ @backend;
+
+    # 1️⃣ Fichiers uploadés
+    location /uploads/ {
+        alias /uploads/;
+        autoindex off;
+        expires 1y;
+        add_header Cache-Control "public";
     }
+
+    # 2️⃣ API explicitement routée vers le backend
+    location /api/ {
+        try_files $uri @backend;
+    }
+
+    # 3️⃣ Frontend SPA (TOUTES les routes React)
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # 4️⃣ Backend (named location)
     location @backend {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
@@ -20,10 +37,4 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /uploads/ {
-        alias /uploads/;
-        autoindex off;
-        add_header Cache-Control "public, max-age=31536000";
-    }
-
 }
